update Java to 17 version